--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:exported="false"
             android:label="@string/title_activity_home" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.appAccess.AppAccessActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
