--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     //Interceptor for retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 }
