Add floating top bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="false"
-            android:label="@string/title_activity_home" />
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.MyApplication.NoActionBar"/>
         <activity
             android:name=".ui.appAccess.AppAccessActivity"
             android:exported="true">
