Add method to create a book

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".ui.add.book.AddBookActivity"
+            android:exported="false"
+            android:label="@string/title_activity_add_book"
+            android:theme="@style/Theme.MyApplication.NoActionBar" />
+        <activity
             android:name=".ui.init.InitActivity"
             android:exported="true"
-            android:theme="@style/Theme.LoadingTheme"
-            >
+            android:theme="@style/Theme.LoadingTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,11 +31,10 @@
             android:name=".ui.home.HomeActivity"
             android:exported="false"
             android:label="@string/title_activity_home"
-            android:theme="@style/Theme.MyApplication.NoActionBar"/>
+            android:theme="@style/Theme.MyApplication.NoActionBar" />
         <activity
             android:name=".ui.appAccess.AppAccessActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
