Add search book, add create a book from a search book screen and add image to books those have a thumbnail url

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
+    id "kotlin-parcelize"
+
 }
 
 android {
@@ -68,4 +71,6 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+
 }
