--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    //jwt decode
+    implementation 'com.auth0.android:jwtdecode:2.0.1'
+
 
 }
