--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bibliotecadebolso.app">
+    package="com.bibliotecadebolso.app" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,7 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.MyApplication" >
+        <activity
+            android:name=".ui.home.nav.DeleteAccountActivity"
+            android:label="@string/title_activity_delete_account"
+            android:exported="false" />
         <activity
             android:name=".ui.add.annotation.AddAnnotationActivity"
             android:exported="false" />
@@ -27,7 +31,7 @@
         <activity
             android:name=".ui.init.InitActivity"
             android:exported="true"
-            android:theme="@style/Theme.LoadingTheme">
+            android:theme="@style/Theme.LoadingTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
