--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".AnnotationListActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.bookInfo.BookInfoActivity"
             android:exported="false"
             android:theme="@style/Theme.MyApplication.PurpleTheme" />
