Add event to edit and update an annotation. Fix dark colors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:exported="false"
             android:label="@string/title_activity_delete_account" />
         <activity
-            android:name=".ui.add.annotation.AddAnnotationActivity"
+            android:name=".ui.add.annotation.AnnotationEditorActivity"
             android:exported="false" />
         <activity
             android:name=".ui.list.annotation.AnnotationListedByBookActivity"
