--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".ui.edit.book.EditBookActivity"
+            android:theme="@style/Theme.MyApplication.PurpleTheme"
+            android:exported="false" />
+        <activity
             android:name=".ui.bookInfo.annotationList.AnnotationListActivity"
             android:exported="false" />
         <activity
