--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,7 @@ dependencies {
 
     implementation 'jp.wasabeef:richeditor-android:2.0.0'
 
+    implementation 'id.zelory:compressor:3.0.1'
+
 
 }
