--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -18,9 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".ui.edit.book.EditBookActivity"
-            android:theme="@style/Theme.MyApplication.PurpleTheme"
+            android:name=".ui.book.gridList.BookListActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.edit.book.EditBookActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MyApplication.PurpleTheme" />
         <activity
             android:name=".ui.bookInfo.annotationList.AnnotationListActivity"
             android:exported="false" />
