Change AddBorrowActivity.kt layout. Add option to get book by BookListActivity.kt on AddBorrowActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:theme="@style/Theme.MyApplication">
         <activity
             android:name=".ui.borrow.add.AddBorrowActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.MyApplication.PurpleTheme">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
