--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".ui.borrow.edit.EditBorrowActivity"
+            android:theme="@style/Theme.MyApplication.PurpleTheme"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.borrow.add.AddBorrowActivity"
             android:exported="false"
             android:theme="@style/Theme.MyApplication.PurpleTheme">
