--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,31 +10,39 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
-    <application
+    <application xmlns:tools="http://schemas.android.com/tools"
         android:name=".application.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication"
-        android:requestLegacyExternalStorage="true"
-        xmlns:tools="http://schemas.android.com/tools">
-
-
+        android:theme="@style/Theme.MyApplication">
+        <activity
+            android:name=".ui.user.requestChangePassword.RequestChangePasswordActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MyApplication.PurpleTheme">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ui.user.ChangePasswordActivity"
-            android:exported="true">
-            <intent-filter android:autoVerify="true" android:label="test"
-                >
+            android:exported="true"
+            android:theme="@style/Theme.MyApplication.PurpleTheme"
+            >
+            <intent-filter
+                android:autoVerify="true"
+                android:label="test">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="https"/>
-                <data android:host="bibliotecadebolso.com"/>
-                <data android:path="/recover"/>
+                <data android:scheme="https" />
+                <data android:host="bibliotecadebolso.com" />
+                <data android:path="/recover" />
             </intent-filter>
 
             <meta-data
