--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
     <uses-feature
@@ -23,9 +24,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".ui.info.AboutActivity"
+            android:exported="false"
+            android:label="Sobre"
+            android:theme="@style/Theme.MyApplication.PurpleTheme">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.annotation.AnnotationLinearListActivity"
-            android:label="@string/label_notes_two_point"
-            android:exported="false">
+            android:exported="false"
+            android:label="@string/label_notes_two_point">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
